refactor: remove @Builder, drop queryParams/reason, add HttpStatus inner serializer/deserializer
Agent-Logs-Url: https://github.com/pedrozc90/java-http/sessions/d5dadd6a-1934-4010-b456-bade652a7b0a

Co-authored-by: pedrozc90 <5891960+pedrozc90@users.noreply.github.com>